--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -41,6 +41,10 @@ MODEL_PATH = {
         "chatglm2-6b-int4": "THUDM/chatglm2-6b-int4",
         "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
         "baichuan-7b": "baichuan-inc/Baichuan-7B",
+        "baichuan2-7b-chat":"baichuan-inc/Baichuan2-7B-Chat",
+        "baichuan2-13b-chat":"baichuan-inc/Baichuan2-13B-Chat",
+        "baichuan2-7b":"baichuan-inc/Baichuan2-7B-Base",
+        "baichuan2-13b":"baichuan-inc/Baichuan2-13B-Base",
     },
 }
 
