1. debug vllm加速框架完毕；2. 修改requirements,requirements_api对vllm的依赖；3.注释掉serve_config中baichuan-7b的device为cpu的配置

--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -88,6 +88,11 @@ FSCHAT_MODEL_WORKERS = {
         # 'disable_log_requests': False
 
     },
+    # 可以如下示例方式更改默认配置
+    # "baichuan-7b": { # 使用default中的IP和端口
+    #    "device": "cpu",
+    # },
+
     "zhipu-api": { # 请为每个要运行的在线API设置不同的端口
         "port": 21001,
     },
