--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -23,7 +23,7 @@ pathlib
 pytest
 scikit-learn
 numexpr
-vllm==0.1.7
+vllm==0.1.7; sys_platform == "linux"
 # online api libs
 # zhipuai
 # dashscope>=1.10.0 # qwen
