--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-langchain==0.0.287
+langchain>=0.0.302
 fschat[model_worker]==0.2.29
 openai
 sentence_transformers
-transformers>=4.31.0
-torch~=2.0.0
-fastapi~=0.99.1
+transformers>=4.33.0
+torch>=2.0.1
+torchvision
+torchaudio
+fastapi>=0.103.1
 nltk~=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
@@ -40,9 +42,13 @@ pandas~=2.0.3
 streamlit>=1.26.0
 streamlit-option-menu>=0.3.6
 streamlit-antd-components>=0.1.11
-streamlit-chatbox >=1.1.6, <=1.1.7
+streamlit-chatbox>=1.1.9
 streamlit-aggrid>=0.3.4.post3
 httpx~=0.24.1
 watchdog
 tqdm
 websockets
+tiktoken
+einops
+scipy
+transformers_stream_generator==0.0.4
