--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,10 +1,12 @@
-langchain==0.0.287
+langchain>=0.0.302
 fschat[model_worker]==0.2.29
 openai
 sentence_transformers
-transformers>=4.31.0
-torch~=2.0.0
-fastapi~=0.99.1
+transformers>=4.33.0
+torch >=2.0.1
+torchvision
+torchaudio
+fastapi>=0.103.1
 nltk~=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
@@ -17,13 +19,14 @@ accelerate
 spacy
 PyMuPDF==1.22.5
 rapidocr_onnxruntime>=1.3.2
-
 requests
 pathlib
 pytest
 scikit-learn
 numexpr
 vllm==0.1.7; sys_platform == "linux"
+
+
 # online api libs
 # zhipuai
 # dashscope>=1.10.0 # qwen
