--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -1,5 +1,5 @@
+import sys
 from configs.model_config import LLM_DEVICE
-import httpx
 
 # httpx 请求默认超时时间（秒）。如果加载模型或对话较慢，出现超时错误，可以适当加大该值。
 HTTPX_DEFAULT_TIMEOUT = 300.0
