--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -174,6 +174,14 @@ ONLINE_LLM_MODEL = {
         "api_key": "",  # 请在阿里云控制台模型服务灵积API-KEY管理页面创建
         "provider": "QwenWorker",
     },
+
+    # 百川 API，申请方式请参考 https://www.baichuan-ai.com/home#api-enter
+    "baichuan-api": {
+        "version": "Baichuan2-53B",  # 当前支持 "Baichuan2-53B"， 见官方文档。
+        "api_key": "",
+        "secret_key": "",
+        "provider": "BaiChuanWorker",
+    },
 }
 
 
