--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,9 +1,9 @@
 langchain>=0.0.302
-fschat[model_worker]==0.2.29
+fschat[model_worker]==0.2.30
 openai
 sentence_transformers
-transformers>=4.33.0
-torch >=2.0.1
+transformers>=4.33.3
+torch>=2.0.1
 torchvision
 torchaudio
 fastapi>=0.103.1
@@ -24,7 +24,8 @@ pathlib
 pytest
 scikit-learn
 numexpr
-vllm==0.1.7; sys_platform == "linux"
+
+vllm>=0.2.0; sys_platform == "linux"
 
 
 # online api libs
@@ -32,6 +33,7 @@ vllm==0.1.7; sys_platform == "linux"
 # dashscope>=1.10.0 # qwen
 # qianfan
 # volcengine>=1.0.106 # fangzhou
+# duckduckgo-searchd #duckduckgo搜索
 
 # uncomment libs if you want to use corresponding vector store
 # pymilvus==2.1.3 # requires milvus==2.1.3
