fix #1638: baichuan-api未正确配置

--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -112,6 +112,9 @@ FSCHAT_MODEL_WORKERS = {
     "qwen-api": {
         "port": 21006,
     },
+    "baichuan-api": {
+        "port": 21007,
+    },
 }
 
 # fastchat multi model worker server
