--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ langchain>=0.0.302
 fschat[model_worker]==0.2.30
 openai
 sentence_transformers
-transformers==4.33.3
-torch>=2.0.1
+transformers>=4.34
+torch>=2.0.1 # 推荐2.1
 torchvision
 torchaudio
 fastapi>=0.103.2
