--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,8 +1,8 @@
 langchain>=0.0.302
-fschat[model_worker]==0.2.30
+fschat[model_worker]>=0.2.30
 openai
 sentence_transformers
-transformers>=4.33.3
+transformers>=4.34
 torch>=2.0.1
 torchvision
 torchaudio
