Wiki完善和Agent完善计划 (#1680)
* 更新上agent提示词代码

* 更新部分文档，修复了issue中提到的bge匹配超过1 的bug

* 按需修改

* 解决了部分最新用户用依赖的bug，加了两个工具，移除google工具

* Agent大幅度优化

1. 修改了UI界面
(1)高亮所有没有进行agent对齐的模型，
(2)优化输出体验和逻辑，使用markdown

2. 降低天气工具使用门槛
3. 依赖更新
(1) vllm 更新到0.2.0，增加了一些参数
(2) torch 建议更新到2.1
(3)pydantic不要更新到1.10.12

* 更新了一些注释

* 修改部分依赖，修改了部分wiki用图

---------

Co-authored-by: zR <zRzRzRzRzRzRzR>

--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,7 +1,7 @@
-langchain>=0.0.302
+langchain>=0.0.310
 fschat[model_worker]>=0.2.30
 openai
-sentence_transformers
+sentence_transformers>=2.2.2
 transformers>=4.34
 torch>=2.0.1
 torchvision
