--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-langchain>=0.0.302
-fschat[model_worker]==0.2.30
+langchain>=0.0.310
+fschat[model_worker]>=0.2.30
 openai
 sentence_transformers
 transformers>=4.34
@@ -17,8 +17,8 @@ SQLAlchemy==2.0.19
 faiss-cpu
 accelerate
 spacy
-PyMuPDF==1.22.5
-rapidocr_onnxruntime>=1.3.2
+PyMuPDF
+rapidocr_onnxruntime
 
 requests
 pathlib
