--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-langchain==0.0.313
-langchain-experimental==0.0.30
+langchain>=0.0.314
+langchain-experimental>=0.0.30
 fschat[model_worker]==0.2.30
 openai
 sentence_transformers
