--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-langchain==0.0.317
-langchain-experimental==0.0.30
+langchain>=0.0.319
+langchain-experimental>=0.0.30
 fschat[model_worker]==0.2.31
-openai
+xformers>=0.0.22.post4
+openai>=0.28.1
 sentence_transformers
 transformers>=4.34
 torch>=2.0.1 # 推荐2.1
 torchvision
 torchaudio
-fastapi>=0.103.2
-nltk~=3.8.1
+fastapi>=0.104
+nltk>=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
 pydantic~=1.10.11
