--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -90,9 +90,8 @@ MODEL_PATH = {
         "Qwen-14B-Chat":"Qwen/Qwen-14B-Chat",
     },
 }
-
 # 选用的 Embedding 名称
-EMBEDDING_MODEL = "m3e-base" # 可以尝试最新的嵌入式sota模型：piccolo-large-zh
+EMBEDDING_MODEL = "m3e-base" # 可以尝试最新的嵌入式sota模型：bge-large-zh-v1.5
 
 
 # Embedding 模型运行设备。设为"auto"会自动检测，也可手动设定为"cuda","mps","cpu"其中之一。
