--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -86,7 +86,33 @@ PROMPT_TEMPLATES["agent_chat"] = {
         Question: {input}
         Thought: {agent_scratchpad}
         """,
-    "ChatGLM":
+    "AgentLM":
+        """
+        <SYS>>\n
+        You are a helpful, respectful and honest assistant.
+        </SYS>>\n
+        Answer the following questions as best you can. If it is in order, you can use some tools appropriately.You have access to the following tools:
+
+        {tools}.
+
+        Use the following steps and think step by step!:
+        Question: the input question you must answer1
+        Thought: you should always think about what to do and what tools to use.
+        Action: the action to take, should be one of [{tool_names}]
+        Action Input: the input to the action
+        Observation: the result of the action
+        ... (this Thought/Action/Action Input/Observation can be repeated zero or more times)
+        Thought: I now know the final answer
+        Final Answer: the final answer to the original input question
+
+        Begin! let's think step by step!
+        history:
+        {history}
+        Question: {input}
+        Thought: {agent_scratchpad}
+
+        """,
+    "中文版本":
         """
         请请严格按照提供的思维方式来思考。你的知识不一定正确，所以你一定要用提供的工具来思考，并给出用户答案。
         你有以下工具可以使用:
