--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,11 @@ pathlib
 pytest
 scikit-learn
 numexpr
+strsimpy
+markdownify
+
 vllm>=0.2.0; sys_platform == "linux"
+
 # online api libs
 # zhipuai
 # dashscope>=1.10.0 # qwen
