--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ streamlit-option-menu>=0.3.6
 streamlit-antd-components>=0.1.11
 streamlit-chatbox==1.1.10
 streamlit-aggrid>=0.3.4.post3
-httpx~=0.24.1
+httpx[brotli,http2,socks]>=0.25.0
 watchdog
 tqdm
 websockets
