--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -117,6 +117,9 @@ FSCHAT_MODEL_WORKERS = {
     # "baichuan-api": {
     #     "port": 21007,
     # },
+    # "azure-api": {
+    #    "port": 21008,
+    # },
 }
 
 # fastchat multi model worker server
