--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -108,6 +108,10 @@ LLM_DEVICE = "auto"
 # 历史对话轮数
 HISTORY_LEN = 3
 
+# 大模型最长支持的长度，如果不填写，则使用模型默认的最大长度，如果填写，则为用户设定的最大长度
+
+MAX_TOKENS = None
+
 # LLM通用对话参数
 TEMPERATURE = 0.7
 # TOP_P = 0.95 # ChatOpenAI暂不支持该参数
@@ -132,7 +136,7 @@ ONLINE_LLM_MODEL = {
         "APPID": "",
         "APISecret": "",
         "api_key": "",
-        "is_v2": False,
+        "version": "v1.5", # 你使用的讯飞星火大模型版本，可选包括 "v3.0", "v1.5", "v2.0"
         "provider": "XingHuoWorker",
     },
     # 百度千帆 API，申请方式请参考 https://cloud.baidu.com/doc/WENXINWORKSHOP/s/4lilb2lpf
