支持在线 Embeddings, Lite 模式支持所有知识库相关功能 (#1924)
新功能：
- 支持在线 Embeddings：zhipu-api, qwen-api, minimax-api, qianfan-api
- API 增加 /other/embed_texts 接口
- init_database.py 增加 --embed-model 参数，可以指定使用的嵌入模型（本地或在线均可）
- 对于 FAISS 知识库，支持多向量库，默认位置：{KB_PATH}/vector_store/{embed_model}
- Lite 模式支持所有知识库相关功能。此模式下最主要的限制是：
  - 不能使用本地 LLM 和 Embeddings 模型
  - 知识库不支持 PDF 文件
- init_database.py 重建知识库时不再默认情况数据库表，增加 clear-tables 参数手动控制。
- API 和 WEBUI 中 score_threshold 参数范围改为 [0, 2]，以更好的适应在线嵌入模型

问题修复：
- API 中 list_config_models 会删除 ONLINE_LLM_MODEL 中的敏感信息，导致第二轮API请求错误

开发者：
- 统一向量库的识别：以（kb_name,embed_model）为判断向量库唯一性的依据，避免 FAISS 知识库缓存加载逻辑错误
- KBServiceFactory.get_service_by_name 中添加 default_embed_model 参数，用于在构建新知识库时设置 embed_model
- 优化 kb_service 中 Embeddings 操作：
  - 统一加载接口： server.utils.load_embeddings，利用全局缓存避免各处 Embeddings 传参
  - 统一文本嵌入接口：server.knowledge_base.kb_service.base.[embed_texts, embed_documents]
- 重写 normalize 函数，去除对 scikit-learn/scipy 的依赖

--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -7,18 +7,19 @@ openai
 # torchvision
 # torchaudio
 fastapi>=0.103.1
+python-multipart
 nltk~=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
 pydantic~=1.10.11
-# unstructured[all-docs]>=0.10.4
-# python-magic-bin; sys_platform == 'win32'
+unstructured[docx,csv]>=0.10.4 # add pdf if need
+python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
-# faiss-cpu
+faiss-cpu
 # accelerate
 # spacy
-# PyMuPDF==1.22.5
-# rapidocr_onnxruntime>=1.3.2
+# PyMuPDF==1.22.5 # install if need pdf
+# rapidocr_onnxruntime>=1.3.2 # install if need pdf
 
 requests
 pathlib
