--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,43 +1,50 @@
+# API requirements
+
 langchain>=0.0.326
 langchain-experimental>=0.0.30
 fschat[model_worker]==0.2.32
 xformers>=0.0.22.post4
 openai>=0.28.1
-sentence_transformers>=2.2.2
-transformers>=4.35
-torch>=2.1
+sentence_transformers
+transformers>=4.34
+torch>=2.0.1 # 推荐2.1
 torchvision
 torchaudio
 fastapi>=0.104
-nltk~=3.8.1
+nltk>=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
 pydantic~=1.10.11
-unstructured[all-docs]>=0.10.4
+unstructured[all-docs]>=0.10.12
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
 faiss-cpu
 accelerate
 spacy
-PyMuPDF==1.22.5
-rapidocr_onnxruntime>=1.3.2
+PyMuPDF
+rapidocr_onnxruntime
+
 requests
 pathlib
 pytest
-scikit-learn
 numexpr
 strsimpy
 markdownify
+tiktoken
+tqdm
+websockets
+numpy~=1.24.4
+pandas~=2.0.3
+einops
+transformers_stream_generator==0.0.4
 
 vllm>=0.2.0; sys_platform == "linux"
-
 
 # online api libs
 # zhipuai
 # dashscope>=1.10.0 # qwen
 # qianfan
 # volcengine>=1.0.106 # fangzhou
-# duckduckgo-searchd #duckduckgo搜索
 
 # uncomment libs if you want to use corresponding vector store
 # pymilvus==2.1.3 # requires milvus==2.1.3
