更新依赖和配置文件中的Agent模型 (#1984)

--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -257,10 +257,11 @@ SUPPORT_AGENT_MODEL = [
     "azure-api",
     "openai-api",
     "claude-api",
-    "Qwen",
+    "zhipu-api",
     "qwen-api",
+    "Qwen",
     "baichuan-api",
-    "agentlm"
-    "chatglm3-6b"
-    "xinghuo-api"
+    "agentlm",
+    "chatglm3",
+    "xinghuo-api",
 ]
