--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -41,7 +41,7 @@ dashscope>=1.10.0 # qwen
 
 numpy~=1.24.4
 pandas~=2.0.3
-streamlit>=1.26.0
+streamlit~=1.27.0
 streamlit-option-menu>=0.3.6
 streamlit-antd-components>=0.1.11
 streamlit-chatbox==1.1.11
