--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # API requirements
 
-langchain>=0.0.329 # 推荐使用最新的Langchain
+langchain>=0.0.329 # suggest to use latest Langchain
 langchain-experimental>=0.0.30
 fschat[model_worker]==0.2.32
 xformers>=0.0.22.post4
 openai>=0.28.1
 sentence_transformers
 transformers>=4.34
-torch>=2.0.1 # 推荐2.1
+torch>=2.0.1 # suggest version 2.1
 torchvision
 torchaudio
 fastapi>=0.104
