--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -1,4 +1,4 @@
-langchain>=0.0.329 # 推荐使用最新的Langchain
+langchain>=0.0.329 # suggest to use latest Langchain
 fschat>=0.2.32
 openai
 # sentence_transformers
