更新了chatglm3 6b agent的文档，提示词 (#2041)
更新了chatglm3 6b agent的文档，提示词
修复代理no_proxy格式问题 #1838 的问题，感谢多次复现和验证
修改了pg清理知识库后还会引用之前知识库的问题

--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -100,8 +100,8 @@ PROMPT_TEMPLATES = {
         Question: {input}
         Thought: {agent_scratchpad}
         """,
-    # ChatGLM3必须用官方的提示词，没有修改空间，参数都不会传入进去
-        "ChatGLM3":
+
+        "ChatGLM3":   # ChatGLM3必须用官方的提示词，没有修改空间，目前参数都不会传入进去
         """
         history:
         {history}
