--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -153,6 +153,9 @@ MODEL_PATH = {
         "chatglm2-6b": "THUDM/chatglm2-6b",
         "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
 
+        "chatglm3-6b": "THUDM/chatglm3-6b",
+        "chatglm3-6b-32k": "THUDM/chatglm3-6b-32k",
+
         "baichuan2-13b": "baichuan-inc/Baichuan2-13B-Chat",
         "baichuan2-7b": "baichuan-inc/Baichuan2-7B-Chat",
 
