--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,6 +1,6 @@
 # API requirements
 
-langchain>=0.0.334 # 推荐使用最新的Langchain
+langchain>=0.0.334 
 langchain-experimental>=0.0.30
 fschat[model_worker]==0.2.32
 xformers>=0.0.22.post4
